# waterandfish-s3-uploader

./: .gitignore  CHANGELOG.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  MEDIAPIPE_S3_PIPELINE_README.md  PACKAGING_GUIDE.md  README.md  build_package.py  config.py  example_config.json  labels.csv  mediapipe_s3_streaming_pipeline.py  mediapipe_s3_streaming_pipeline_integrated.py  pyproject.toml  requirements.txt  run_pipeline.sh  run_sign_language_pipeline.sh  setup.py  spec14.json  test_mediapipe.py  test_pipeline_debug.py  usage_example.py
s3_uploader/: __init__.py  mediapipe_s3_streaming_pipeline.py  pipeline_config.py
s3_uploader/examples/: __init__.py  basic_usage.py
